# rkd-telemetry-extractor

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  RESEARCH_NOTES.md  RKD_FORMAT_SPEC.md  SESSION_LOG.md  ci.yml.rename-to-github-workflows  rkd_parser.py
.github/workflows/: ci.yml  claude-review.yml  release.yml
go/: Makefile  go.mod  main.go  main_test.go
go/rkd/: export.go  parser.go  parser_test.go  sample.go  session_info.go
python/: pyproject.toml  rkd_parser.py
python/tests/: test_rkd_parser.py
samples/: README.md  sample_mettet.rkd  sample_output.csv  sample_output.gpx
tests/: test_rkd_parser.py
