[project]
name = "rkd-telemetry-extractor"
version = "1.0.0"
description = "Extract GPS, accelerometer, and gyroscope data from Race-Keeper .rkd telemetry files"
requires-python = ">=3.9"
license = "MIT"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rkd_parser --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["rkd_parser"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]
